[package]
name = "aoc-rust-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
color-eyre = "0.6.2"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
log = "0.4.20"
regex = "1.10.2"
num = "0.4.1"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
glam = "0.24.2"
once_cell = "1.19.0"

[dev-dependencies]
rstest = "0.18.2"
insta = { version = "1.34.0", features = ["yaml"] }
indoc = "2.0.4"
pretty_assertions = "1.4.1"